--- a/Assets/Files/style.css
+++ b/Assets/Files/style.css
@@ -1,51 +1,54 @@
 * {
-    margin:0;
-    padding:0;  
-  }
+    margin: 0;
+    padding: 0;
+}
 
 
 body {
-    background-color: #4C2D1D;
-    background-image:linear-gradient(#6D412A);
-    display: grid;
-    background-image: 
-    linear-gradient(0deg, transparent 9%, 
+    background-color: #6D412A;
+    background-image: black;
+    background-image:
+        linear-gradient(0deg, transparent 9%,
             rgba(255, 255, 255, .2) 10%, rgba(255, 255, 255, .2) 12%, transparent 13%, transparent 29%),
-    linear-gradient(90deg, transparent 9%, 
+        linear-gradient(90deg, transparent 9%,
             rgba(255, 255, 255, .2) 10%, rgba(255, 255, 255, .2) 12%, transparent 13%, transparent 29%),
-    linear-gradient(0deg, transparent, 100%, rgba(0,0,0,.5));
-  background-size:80px 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  flex-direction: column;
-  width: 100%;
+        linear-gradient(0deg, transparent, 100%, rgba(0, 0, 0, .5));
+    background-size: 90px 90px;
+}
+
+.body-cointainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    flex-direction: column;
+    width: 100%;
 }
 
 p {
     font-size: 40px;
     color: #EBA70E;
     margin-top: 40px;
+    text-shadow: black 4px 1px 0
 }
 
 a img {
-height: 120px;
-width: 300px;
-margin-top: 80px;
+    height: 120px;
+    width: 300px;
+    margin-top: 80px;
 }
 
-#content{
+#content {
     display: flex;
     display: block;
 }
 
 #textCointainer {
-width: 60%;
+    width: 60%;
 }
 
 .wrapper {
-    width: 100%;
+    width: 95%;
 }
 
 /* Typewriter styling */
@@ -59,38 +62,96 @@ width: 60%;
     border-right: 5px solid white;
     letter-spacing: 0.05em;
     position: relative;
+    text-shadow: rgb(196, 57, 29) 7px 5px 0
 }
 
-/* .welcomeText2 {
-    font-size: 230px;
-    color: #EBA70E;
-    animation: typing 2s steps(15) 1s 1 normal both, blinking-cursor 1s steps(8) infinite normal;
-    overflow: hidden;
-    white-space: nowrap;
-    margin: 0 auto;
-    border-right: 5px solid white;
-    letter-spacing: 0.05em;
-    position: absolute;
-    right: 560px;
-    bottom: 720px;
-} */
 
 @keyframes typing {
     from {
         width: 0
     }
+
     to {
         width: 50%;
     }
 }
 
 @keyframes blinking-cursor {
-from, to {
-    border-color: transparent;
-}
-50% {
-    border-color: white;
-}
+
+    from,
+    to {
+        border-color: transparent;
+    }
+
+    50% {
+        border-color: white;
+    }
 }
 
-/* media qurey */
+/* Projects Page CSS */
+.project-img {
+    height: 300px;
+    width: 450px;
+    margin-top: 0px;
+}
+.project-img:hover {
+    opacity: 0.8;
+  }
+
+.project-welcome {
+    font-size: 150px;
+    color: #EBA70E;
+    margin: 0 auto;
+    letter-spacing: 0.05em;
+    text-shadow: rgb(196, 57, 29) 7px 5px 0
+}
+
+.project-title {
+    margin-top: 10px;
+    font-size: 45px;
+    margin-left: 20px;
+}
+
+.projects-cointainer {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin-top: 100px;
+}
+
+.project-cointainer {
+width: 475px;
+display: flex;
+display: block;
+justify-content: center;
+height: fit-content;
+}
+
+.project-description {
+    width: fit-content;
+    margin-left: 20px;
+}
+
+.project-text {
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+#projects-page-title-wrapper {
+width: 100%;
+display: flex;
+justify-content: center;
+margin-top: 80px;
+}
+
+/* media queries */
+@media (max-width: 1425px){
+.project-cointainer {
+    margin-top: 50px;
+}
+}
+@media (max-width: 670px){
+    .project-welcome {
+        font-size: 80px;
+    }
+    }
