--- a/Assets/Files/style.css
+++ b/Assets/Files/style.css
@@ -5,8 +5,7 @@
 
 
 body {
-    background-color: #6D412A;
-    background-image: black;
+    background-color: #4C2D1D;
     background-image:
         linear-gradient(0deg, transparent 9%,
             rgba(255, 255, 255, .2) 10%, rgba(255, 255, 255, .2) 12%, transparent 13%, transparent 29%),
