--- a/hello-world/src/App.css
+++ b/hello-world/src/App.css
@@ -96,8 +96,11 @@ nav a {
 align-items: center;  }
 
   .resume-h1 {
-    color: #fff;
-    font-size: 40px;
+    font-size: 80px;
+    color: #EBA70E;
+    margin: 0;
+    letter-spacing: 0.05em;
+    text-shadow: rgb(196, 57, 29) 4px 2px 0px
   }
 
   .resume-img {
